Fix minor spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body{
   font-family:sans-serif;
 }
 
+
 #projects{
   background-color:#adcfda;
 }
@@ -61,19 +62,6 @@ input[type='checkbox']{
   color: #6c4a00;
 }
 
-.bg-toggle {
-  display: block;
-  font-weight: bold;
-  padding: 1rem;
-  color: #906060;
-  background: #7d9faa;
-  border-radius: 7px;
-  margin-right: 91%;
-}
-
-.bg-toggle:hover {
-  color: #6c4a00;
-}
 
 .collapsible-content {
   max-height: 0px;
@@ -81,8 +69,9 @@ input[type='checkbox']{
 }
 
 .toggle:checked + .lbl-toggle + .collapsible-content {
-  max-height: 350px;
+  max-height: 100%;
 }
+
 
 .toggle:checked + .lbl-toggle{
   margin-bottom:-3px;
